# preserve-those-podcasts

./: .gitignore  DEV.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test-preserve-podcasts.yml
preserve-podcasts/: __init__.py  __main__.py  pod_sessiosn.py  podcast.py  preservePodcasts.py
preserve_podcasts/: __main__.py  exception.py  pod_sessiosn.py  podcast.py  preservePodcasts.py  uploadPodcasts.py  version.py
preserve_podcasts/utils/: file.py  fileLock.py  program_lock.py  requests_patch.py  response.py  type_check.py  util.py
