[tool.poetry]
name = "preserve-podcasts"
version = "0.0.0"
description = "A"
authors = ["yzqzss <yzqzss@yandex.com>"]
license = "WTFPL"
readme = "README.md"
packages = [{include = "preserve-podcasts"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
rich = "^13.3.3"
feedparser = "^6.0.10"

[tool.poetry.scripts]
preserve-podcasts = "preserve-podcasts:main"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
