[tool.poetry]
name = "PreserveThosePod"
version = "1.0.7"
description = "Preserve those podcasts!"
authors = ["yzqzss <yzqzss@yandex.com>"]
license = "WTFPL"
readme = "README.md"
packages = [{include = "preserve_podcasts/"}]

[tool.poetry.urls]
respository = "https://github.com/saveweb/preserve-those-podcasts"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
rich = "^13.3.3"
feedparser = "^6.0.10"
pyrfc6266 = "^1.0.2"
internetarchive = "^3.5.0"

[tool.poetry.scripts]
podcastsPreserve = "preserve_podcasts:main"
podcastsUpload = "preserve_podcasts.uploadPodcasts:main"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
